# RUMUS

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
rumus/: Cargo.toml  README.md  build.rs
rumus-distributed/: Cargo.toml  README.md
rumus-distributed/src/: collective.rs  lib.rs  pipeline.rs  tensor_parallel.rs
rumus-graph/: Cargo.toml  README.md
rumus-graph/src/: graph.rs  lib.rs  ops.rs  spmm.wgsl
rumus-macros/: Cargo.toml  README.md
rumus-macros/src/: lib.rs
rumus-serve/: Cargo.toml  README.md
rumus-serve/src/: gpu_worker.rs  main.rs  model.rs  scheduler.rs  server.rs
rumus-vision/: Cargo.toml  README.md
rumus-vision/src/: lib.rs  ops.rs  quant.rs
rumus-vision/src/shaders/: conv2d_backward_data.wgsl  conv2d_backward_weight.wgsl  conv2d_direct.wgsl  maxpool2d_backward.wgsl  maxpool2d_direct.wgsl  qmatmul_int4.wgsl  qmatmul_int4_transpose.wgsl
rumus/proto/: onnx.proto
rumus/src/: lib.rs  train.rs
rumus/src/autograd/: backward.rs  backward_ops.rs  context.rs  gradient_store.rs  mod.rs  tape.rs
rumus/src/backend/: cpu.rs  mod.rs
rumus/src/backend/gpu/: compute.rs  context.rs  mod.rs  pool.rs
rumus/src/backend/gpu/shaders/: activations.wgsl  adamw.wgsl  adaptive_pool.wgsl  batch_norm.wgsl  batch_norm_bw.wgsl  bias.wgsl  bmm.wgsl  broadcast.wgsl  broadcast_scale.wgsl  cast.wgsl  contiguous.wgsl  conv.wgsl  cross_entropy.wgsl  dequantize.wgsl  dropout.wgsl  elementwise.wgsl  embedding.wgsl  flash_attn.wgsl  fused_dropout.wgsl  fused_scale.wgsl  layer_norm.wgsl  layer_norm_bw.wgsl  layer_norm_grad_weight.wgsl  matmul.wgsl  matmul_q8.wgsl  optim.wgsl  pool.wgsl  quantize.wgsl  reduce_sum_sq.wgsl  softmax.wgsl  softmax_bw.wgsl  unary.wgsl
rumus/src/data/: dataloader.rs  dataset.rs  mod.rs  record.rs
rumus/src/ext/: mod.rs
rumus/src/jit/: cache.rs  codegen.rs  mod.rs  tracer.rs
rumus/src/nn/: activations.rs  adaptive_pool.rs  attention.rs  batch_norm.rs  conv.rs  conv_transpose.rs  dropout.rs  embedding.rs  flatten.rs  fsdp.rs  io.rs  layer_norm.rs  linear.rs  loss.rs  mod.rs  module.rs  parallel.rs  parameter.rs  pool.rs  transformer.rs
rumus/src/onnx/: export.rs  mod.rs  proto.rs  tracer.rs
rumus/src/optim/: adam.rs  adamw.rs  clip.rs  mod.rs  scheduler.rs  sgd.rs
rumus/src/tensor/: broadcast.rs  core.rs  mod.rs  ops.rs
rumus/tests/: cnn_test.rs  gpu_mlp_test.rs  mlp_test.rs  train_loop_test.rs  transformer_test.rs
src/: lib.rs
src/autograd/: backward.rs  backward_ops.rs  context.rs  mod.rs  tape.rs
src/backend/: cpu.rs  mod.rs
src/nn/: mod.rs  module.rs  parameter.rs
src/optim/: mod.rs
src/tensor/: core.rs  ops.rs
