[package]
name = "rumus-macros"
version = "0.1.2"
edition = "2024"
description = "Proc macros for the RUMUS deep learning framework"
license = "MIT"
repository = "https://github.com/SUM-INNOVATION/RUMUS"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
