[package]
name = "rumus-macros"
version = "0.1.3"
edition = "2024"
description = "Proc macros for the RUMUS deep learning framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SUM-INNOVATION/RUMUS"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
