[package]
name = "rumus"
version = "0.2.1"
readme = "README.md"
edition = "2024"
description = "A native-Rust deep learning framework with explicit memory safety and hardware acceleration"
license = "MIT"
repository = "https://github.com/SUM-INNOVATION/RUMUS"

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]

[dependencies]
rumus-macros = { version = "0.1.2", path = "../rumus-macros" }
safetensors = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
parking_lot = "0.12"

# GPU-only dependencies (activated by `--features gpu`)
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }
