[package]
name = "rumus"
version = "0.2.3"
readme = "README.md"
edition = "2024"
description = "A native-Rust deep learning framework with explicit memory safety and hardware acceleration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/SUM-INNOVATION/RUMUS"

[features]
default = []
gpu = ["dep:wgpu", "dep:pollster"]
onnx = ["dep:prost"]
jit = ["gpu"]

[dependencies]
rumus-macros = { version = "0.1.3", path = "../rumus-macros" }
safetensors = "0.4"
bytemuck = { version = "1.14", features = ["derive"] }
parking_lot = "0.12"
memmap2 = "0.9"

# GPU-only dependencies (activated by `--features gpu`)
wgpu = { version = "24", optional = true }
pollster = { version = "0.4", optional = true }

# ONNX export (activated by `--features onnx`)
prost = { version = "0.13", optional = true }

[build-dependencies]
prost-build = "0.13"
